# game

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2_image.cmake
hello.dSYM/Contents/Resources/DWARF/: hello
hello.dSYM/Contents/Resources/Relocations/aarch64/: hello.yml
src/: Collidable.h  CollidableManager.h  Game.cpp  Game.h  GameUtils.cpp  GameUtils.h  Monster.cpp  Monster.h  MonsterFactory.cpp  MonsterFactory.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Slime.cpp  Slime.h  hello.cpp  main.cpp
src/entities/: Hopper.h
src/entities/monsters/: Hopper.cpp  Hopper.h  Monster.cpp  Monster.h  MonsterFactory.cpp  MonsterFactory.h  Slime.cpp  Slime.h
src/entities/weapons/: Bullet.cpp  Bullet.h  Gun.cpp  Gun.h
